--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     ]
   },
   "dependencies": {
-    "@styled-icons/evaicons-outline": "^10.18.0",
+    "@styled-icons/material": "^10.28.0",
+    "@styled-icons/material-outlined": "^10.28.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "leaflet": "^1.7.1",
@@ -43,6 +44,7 @@
     "@types/leaflet": "^1.5.23",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
